# Pecan_Company_CRM

./: .env.example  .gitignore  CLIENT_EMAIL_DRAFT.md  Pecan_POS_Azure_Access_Issues.md  README.md  alembic.ini  issues.json  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260218_0001_initial_schema.py  20260218_0002_receipt_sequence.py  20260218_0003_finalize_idempotency_key.py
backend/: .env.example  .gitignore  README.md  manage.py  requirements.txt
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
backend/integrations/: azure.py  legacy.py
backend/scripts/: run_local.bat  run_local.ps1  run_local.sh
docs/discovery/: azure-usage-model.md  legacy-access-inventory.md  mvp-workflow-and-screens.md  pricing-tax-discount-rules.md  receipt-spec.md
docs/migration/: access-to-azure-mapping.md  cutover-and-rollback-plan.md  migration-script-runbook.md  parallel-run-validation-checklist.md
docs/operations/: azure-provisioning-stub-runbook.md  backup-and-restore.md  ci-required-checks.md  finalize-idempotency-and-reconciliation.md  joshua-quick-start.md  local-demo-setup.md  (+4 more)
packaging/: PecanCRM.iss  pecan_crm.spec
scripts/: build_exe.ps1  build_installer.ps1  create_issues.py  customer_dedupe_report.py  migrate_access_exports.py  reconcile_receipts.py
tests/: test_env_parser.py  test_offline_queue.py  test_pricing.py  test_receipt_numbers.py
webapp/: index.html
(+50 files in other folders)
