[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pecan-company-crm"
version = "0.1.0"
description = "Pecan Company desktop CRM/POS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "pyodbc>=5.1",
  "pydantic>=2.7",
  "keyring>=25.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
